--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
                 <!-- Personal Card 1 -->
                 <div class="col-md-6 col-lg-4 mb-4">
                   <div class="card">
-                    <img src="images/car.jpg" class="card-img-top" alt="Toyota Supra" id="cars">
+                    <img src="images/car.jpg" class="card-img-top" alt="Toyota Supra" id="cars" style="transform: rotate(-90deg);">
                     <div class="card-body">
                       <h5 class="card-title">My Summer Car</h5>
                       <p class="card-text hidden-text">A Supra was my dream car and I had the honor to drive this my senior year.</p>
