--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h3>Code Things</h3>
             <ul class="code-things">
               <li><a href="" target="_blank"> Github Repo</a></li>
-              <li><a class="text-body" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fbarrycumbie.github.io%2Fwhatever-thing-echo%2F" target="nu">check this page's validity</a></li>
+              <li><a class="text-body" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fnrobinson4.github.io%2Fubiquitous-fishstick-foxtrot%2F" target="nu">check this page's validity</a></li>
             </ul>
         </div>
       </div>
