--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -74,9 +73,9 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <iframe height="300" style="width: 100%;" scrolling="no" title="See my first Pen nrobinson4-greeting" src="https://codepen.io/nrobinson4/embed/bGZrBEO?default-tab=html,result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See my first Pen <a href="https://codepen.io/nrobinson4/pen/bGZrBEO">nrobinson4-greeting</a> by nrobinson4 (<a href="https://codepen.io/nrobinson4">@nrobinson4</a>) on <a href="https://codepen.io">CodePen</a>.
-        </iframe>        
+        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="bGZrBEO" data-user="nrobinson4">
+        <span>See the Pen <a href="https://codepen.io/nrobinson4/pen/bGZrBEO">nrobinson4</a> by Nolen Robinson(<a href="https://codepen.io/nrobinson4">@nrobinson4</a>) on <a href="https://codepen.io">CodePen</a>.</span>
+      </p>        
       </div>
     </div>
   </div>
