--- a/projects.html
+++ b/projects.html
@@ -73,9 +73,11 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="bGZrBEO" data-user="nrobinson4">
-        <span>See the Pen <a href="https://codepen.io/nrobinson4/pen/bGZrBEO">nrobinson4</a> by Nolen Robinson(<a href="https://codepen.io/nrobinson4">@nrobinson4</a>) on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>        
+        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="bGZrBEO" data-user="nrobinson4" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/nrobinson4/pen/bGZrBEO">
+  alfa-web-greeting</a> by nrobinson4 (<a href="https://codepen.io/nrobinson4">@nrobinson4</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>        
       </div>
     </div>
   </div>
