--- a/projects.html
+++ b/projects.html
@@ -112,8 +112,8 @@
       © 2024 Copyright: Nolen Robinson
     </div>
   </footer>
-  
-  
+<!--   for the codepen -->
+  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   
