--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="col-md-4">
             <h3>Code Things</h3>
             <ul class="code-things">
-              <li><a href="" target="_blank"> Github Repo</a></li>
+              <li><a href="https://github.com/nrobinson4/ubiquitous-fishstick-foxtrot" target="_blank"> Github Repo</a></li>
               <li><a class="text-body" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fnrobinson4.github.io%2Fubiquitous-fishstick-foxtrot%2F" target="nu">check this page's validity</a></li>
             </ul>
         </div>
