--- a/index.html
+++ b/index.html
@@ -59,8 +59,36 @@
   <div class="image-text">
     <h1>Welcome to Nolen's Portfolio</h1>
     <p>Enjoy Your Stay!</p>
-  </div>
+    
+    <div class="row mt-5">
+      <h3>Quick Links</h3>
+      <div class="col-md-4">
+          <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">About Me</h5>
+                <a href="aboutme.html" target="_blank"><button class="button button5">Go!</button></a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-dark bg-info mb-3" stzyle="max-width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Projects</h5>
+                <a href="projects.html" target="_blank"><button class="button button5">Go!</button></a>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Resume</h5>
+                <a href="resume.html" target="_blank"><button class="button button5">Go!</button></a>
+            </div>
+        </div>
+      </div>
+    </div>
 </div>
+
 
 
 
