--- a/index.html
+++ b/index.html
@@ -66,15 +66,17 @@
           <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">About Me</h5>
-                <a href="aboutme.html" target="_blank"><button class="button button5">Go!</button></a>
+                <a href="aboutme.html" target="_blank"></a>
+                  <button class="button button5">Go!</button>
               </div>
           </div>
       </div>
       <div class="col-md-4">
-        <div class="card text-dark bg-info mb-3" stzyle="max-width: 18rem;">
+        <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Projects</h5>
-                <a href="projects.html" target="_blank"><button class="button button5">Go!</button></a>
+                <a href="projects.html" target="_blank"></a>
+                  <button class="button button5">Go!</button>
             </div>
         </div>
       </div>
@@ -82,11 +84,13 @@
         <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Resume</h5>
-                <a href="resume.html" target="_blank"><button class="button button5">Go!</button></a>
+                <a href="resume.html" target="_blank"></a>
+                  <button class="button button5">Go!</button>
             </div>
         </div>
       </div>
     </div>
+</div>
 </div>
 
 
