--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">About Me</h5>
-                <a href="aboutme.html" target="_blank"></a>
-                  <button class="button button5">Go!</button>
+                <a href="aboutme.html" target="_blank" class="button button5">Go!</a>
+                  
               </div>
           </div>
       </div>
@@ -75,8 +75,7 @@
         <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Projects</h5>
-                <a href="projects.html" target="_blank"></a>
-                  <button class="button button5">Go!</button>
+                <a href="projects.html" target="_blank" class="button button5">Go!</a>
             </div>
         </div>
       </div>
@@ -84,8 +83,7 @@
         <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Resume</h5>
-                <a href="resume.html" target="_blank"></a>
-                  <button class="button button5">Go!</button>
+                <a href="resume.html" target="_blank" class="button button5">Go!</a>
             </div>
         </div>
       </div>
